--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.13",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
